Add Notkia 168x config

--- a/boards.cfg
+++ b/boards.cfg
@@ -589,6 +589,7 @@ halley2_vmlinux_nor_spl_boot      mips        xburst      halley2		      ingenic
 halley2_rtos_nand_spl_boot        mips        xburst      halley2		      ingenic        x1000      halley2:SPL_SFC_NAND,MTD_SFCNAND,SPL_OS_BOOT,BOOT_RTOS
 canna_xImage_nor_spl_boot         mips        xburst      canna		          ingenic        x1000	    canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE,NOR_SPL_BOOT_OS,OTA_VERSION20,MTD_SFCNOR
 canna_xImage_nand_spl_boot        mips        xburst      canna		          ingenic        x1000	    canna:SPL_SFC_NAND,SPL_OS_BOOT
+notkia-168x_uImage_sfc_nor        mips        xburst      notkia-168x	      ingenic        x1000      notkia-168x:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
 x1501-pico_uImage_sfc_nor         mips        xburst      x1501-pico	      ingenic        x1000      x1501-pico:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
 cu1000-neo_uImage_msc0            mips        xburst      cu1000-neo          ingenic        x1000		cu1000-neo:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 cu1000-neo_uImage_sfc_nor         mips        xburst      cu1000-neo	      ingenic        x1000      cu1000-neo:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
