--- a/boards.cfg
+++ b/boards.cfg
@@ -590,6 +590,8 @@ halley2_rtos_nand_spl_boot        mips        xburst      halley2		      ingenic
 canna_xImage_nor_spl_boot         mips        xburst      canna		          ingenic        x1000	    canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE,NOR_SPL_BOOT_OS,OTA_VERSION20,MTD_SFCNOR
 canna_xImage_nand_spl_boot        mips        xburst      canna		          ingenic        x1000	    canna:SPL_SFC_NAND,SPL_OS_BOOT
 notkia-168x_uImage_sfc_nor        mips        xburst      notkia-168x	      ingenic        x1000      notkia-168x:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
+x1000-nano_uImage_sfc_nor         mips        xburst      x1000-nano	      ingenic        x1000      x1000-nano:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
+x1000-nano_uImage_sfc_nand        mips        xburst      x1000-nano	      ingenic        x1000      x1000-nano:SPL_SFC_NAND,MTD_SFCNAND
 x1501-pico_uImage_sfc_nor         mips        xburst      x1501-pico	      ingenic        x1000      x1501-pico:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
 cu1000-neo_uImage_msc0            mips        xburst      cu1000-neo          ingenic        x1000		cu1000-neo:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 cu1000-neo_uImage_sfc_nor         mips        xburst      cu1000-neo	      ingenic        x1000      cu1000-neo:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
@@ -610,6 +612,9 @@ seal_uImage_msc0	              mips	      xburst2     seal		          ingenic	  
 seal_uImage_sfc_nand	          mips        xburst2     seal                ingenic	     x2000	    seal:SPL_SFC_NAND,MTD_SFCNAND
 seal_uImage_sfc_nor	              mips        xburst2     seal                ingenic        x2000	    seal:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
 burner_x2000_lpddr2	              mips        xburst2     burner_x2000        ingenic        x2000	    burner_x2000:JZ_MMC_MSC0,CMD_BURN,CMD_SFC_NOR,MTD_SFCNAND
+########################################################################################################################
+sudomaker-internal-clone-de-cle_uImage_sfc_nor       mips        xburst      sudomaker-internal-clone-de-cle	      ingenic        x1000      sudomaker-internal-clone-de-cle:SPL_SFC_NOR,ENV_IS_IN_SFC,MTD_SFCNOR
+########################################################################################################################
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
